fixed linebreak at start of long lines in config var names by making the div containing the tooltip img a float + deleting "display: inline-block;" -- shifted tooltip a bit to left so that links in tooltip are accessible, -- changed colors from #333 to #222 and captcha input from #444 to #222 for better legibility, -- shifted xh_setting 3 px up via "margin: 0 0 6px 0;" for better alignment;
git-svn-id: http://svn.code.sf.net/p/cmsimplexh/code/branches/1.6@1121 4f8f9682-67af-44ce-aacd-401fd16d96b5

--- a/css/core.css
+++ b/css/core.css
@@ -256,7 +256,7 @@
 .text, .xh_captcha_input {
     font-family: arial, sans-serif;
     font-size: 14px;
-    color: #444;
+    color: #222;
     padding: 2px 4px;
     margin: 0 0 2px 0;
 }
@@ -331,7 +331,6 @@ div.plugineditcaption {
 }
 
 #xh_config_form div.xh_label span.xh_label {
-    display: inline-block;
     margin: 3px 0;
 }
 
@@ -347,9 +346,9 @@ input.xh_setting,
 input.cmsimplecore_settings {
     width: 90%;
     /*font-size: 14px;*/
-    color: #333;
-    padding: 2px 3px;
-    margin: 3px 0;
+    color: #222;
+    padding: 1px 3px;
+    margin: 0 0 6px 0;
     border: 1px solid #ccc;
     background: #fff;
 }
@@ -359,9 +358,9 @@ textarea.cmsimplecore_settings {
     width: 90%;
     height: 56px;
     font-size: 14px;
-    color: #333;
-    padding: 2px 3px;
-    margin: 3px 0;
+    color: #222;
+    padding: 1px 3px;
+    margin: 0 0 6px 0;
     border: 1px solid #ccc;
     background: #fff;
     overflow: hidden;
@@ -413,8 +412,8 @@ a.pl_tooltip:hover span {
     z-index: 10;
     border: 1px dotted;
     padding: 2px 10px 2px 10px;
-    background: #EEEEEE;
-    color: #333;
+    background: #eee;
+    color: #222;
     text-align: left;
 }
 
@@ -428,16 +427,12 @@ a.pl_tooltip img {
  */
 
 div.pl_tooltip {
-    font-family: arial, sans-serif;
-    font-size: 14px;
-    display: inline;
-}
-
-div.pl_tooltip {
-    position: relative;
+    font: normal normal 14px arial, sans-serif;
     text-decoration: none;
-    font-weight: normal;
+    position: relative;
     border: 0;
+    float: left;
+    margin-right: .25em;
 }
 
 div.pl_tooltip:hover {
@@ -457,14 +452,14 @@ div.pl_tooltip > div p {
 div.pl_tooltip:hover > div {
     display: block;
     position: absolute;
-    top: 15px;
-    left: 15px;
+    top: 1em;
+    left: .7em;
     width: 360px;
     z-index: 10;
-    border: 1px dotted;
-    padding: 2px 10px 2px 10px;
-    background: #EEEEEE;
-    color: #333;
+    border: 1px dotted #666;
+    padding: 7px 10px;
+    background: #eee;
+    color: #222;
     text-align: left;
 }
 
@@ -556,7 +551,7 @@ div.xh_modal_dialog_overlay {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #333;
+    background-color: #222;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 9999;
 }
@@ -633,7 +628,7 @@ textarea.xh_file_edit {
     width: 99%;
     font-family: 'courier new', monospace;
     font-size: 14px;
-    color: #333;
+    color: #222;
     background-color: #fff;
     padding: 0 !important;
 }
